samples/_failures_safe/1761789562_5ec1d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65665efe.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_65665efe.c:130:9: error: expected declaration or statement at end of input
  130 |         }
      |         ^
./samples/SAFE/__tmp_65665efe.c:130:9: error: expected declaration or statement at end of input
